Fix Firefox outline styling in history pages
Hide the overflow of the buttons added by IPInfo to the history
page, so that the outline is not stretched in Firefox.

Bug: T268981

--- a/modules/ext.ipInfo/ipinfo.less
+++ b/modules/ext.ipInfo/ipinfo.less
@@ -22,6 +22,7 @@
 		margin-left: 2px;
 		min-width: 20px;
 		min-height: 20px;
+		overflow: hidden;
 
 		& > .oo-ui-iconElement-icon {
 			left: -1px;
